# bamberg-tavern

./: .gitignore  AGENTS.md  Ideen.md  README.md  THIRD_PARTY_LICENSES.md  bamberg-tavern.cabal  flake.nix  result-1  result-2  result-3
.claude/: settings.local.json
.github/workflows/: ci.yml  pages.yml
.static-dev/: pico.min.css  theme.css
.static-dev/fonts/: OFL.txt
app/: Main.hs
books/common/: template.typ
books/gm/de/: main.typ
books/gm/en/: main.typ
books/player/de/: main.typ
books/player/en/: main.typ
scenes/: main.typ
scenes/de/: main.typ
site/: index.html
src/Tavern/: Booking.hs  View.hs
test/: Spec.hs
theme/: theme.css
